swipe fix on mobile

--- a/src/containers/Overview/Overview.scss
+++ b/src/containers/Overview/Overview.scss
@@ -1,8 +1,3 @@
-@mixin space-between {
-    display: flex;
-    justify-content: space-between;
-}
-
 @mixin column {
     display: flex;
     flex-direction: column;
@@ -47,7 +42,8 @@
     }
 
     #results {
-        @include space-between;
+        display: flex;
+        justify-content: space-evenly;
 
         .total {
             width: 200px;
@@ -85,8 +81,8 @@
     }
 
     #restart {
-        margin-top: 80px;
         @include column;
+        margin-top: 80px;
         align-items: center;
 
         button {
@@ -129,7 +125,8 @@
 
             .total {
                 margin-bottom: 20px;
-                @include space-between;
+                display: flex;
+                justify-content: space-between;
             }
         }
 
